--- a/ProfileViewTest/ProfileProperties.xaml
+++ b/ProfileViewTest/ProfileProperties.xaml
@@ -50,7 +50,7 @@
         </Style>
 
     </Window.Resources>
-    
+
     <Grid>
         <TabControl TabStripPlacement="Top" FontSize="25">
 
@@ -59,7 +59,7 @@
                 <TabItem.Header>
                     <TextBlock Margin="10" Text="Format" FontSize="25" />
                 </TabItem.Header>
-                
+
                 <!-- FORMAT CONTENT -->
                 <TabItem.Content>
 
@@ -72,7 +72,7 @@
                             <RowDefinition Height="*" />
 
                         </Grid.RowDefinitions>
-                        
+
                         <!-- Grid for non-button content in tab "Format" -->
                         <Grid Margin="15" Grid.Row="0">
 
@@ -89,10 +89,10 @@
                                 <Grid>
 
                                     <Grid.ColumnDefinitions>
-                                        
+
                                         <ColumnDefinition Width="*" />
                                         <ColumnDefinition Width="4*" />
-                                        
+
                                     </Grid.ColumnDefinitions>
 
                                     <TextBlock HorizontalAlignment="Right" Text="Name:" Grid.Column="0"/>
@@ -303,23 +303,44 @@
 
                                     <GroupBox BorderThickness="3" Header="Colors" HorizontalAlignment="Stretch" Grid.Column="0">
 
-                                        <Grid>
 
-                                            <Grid.ColumnDefinitions>
+                                        <StackPanel>
 
-                                                <ColumnDefinition Width="Auto" />
-                                                <ColumnDefinition Width="Auto" />
-                                                <ColumnDefinition Width="Auto" />
+                                            <Grid>
 
-                                            </Grid.ColumnDefinitions>
+                                                <Grid.ColumnDefinitions>
 
-                                            <TextBlock Grid.Column="0" Text="Background:" />
+                                                    <ColumnDefinition Width="3" />
+                                                    <ColumnDefinition Width="136"/>
+                                                    <ColumnDefinition Width="Auto" />
+                                                    <ColumnDefinition Width="Auto" />
 
-                                            <Button Grid.Column="1" Margin="20 0 0 0">Color...</Button>
+                                                </Grid.ColumnDefinitions>
 
-                                        </Grid>
-                                        
-                                        
+                                                <TextBlock Grid.Column="0" Text="Background:" Grid.ColumnSpan="2" />
+
+                                                <Button Grid.Column="2" Margin="20 0 0 0">Color...</Button>
+
+                                            </Grid>
+
+                                            <Grid>
+
+                                                <Grid.ColumnDefinitions>
+
+                                                    <ColumnDefinition Width="Auto" />
+                                                    <ColumnDefinition Width="Auto" />
+                                                    <ColumnDefinition Width="Auto" />
+
+                                                </Grid.ColumnDefinitions>
+
+                                                <TextBlock Grid.Column="0" Text="Select Region:" />
+
+                                                <Button Grid.Column="1" Margin="20 0 0 0">Color...</Button>
+
+                                            </Grid>
+
+                                        </StackPanel>
+
 
                                     </GroupBox>
 
@@ -355,8 +376,8 @@
                         </Grid>
 
                     </Grid>
-                    
-                    
+
+
                 </TabItem.Content>
 
             </TabItem>
@@ -371,7 +392,7 @@
                 <TabItem.Content>
                     <TextBlock Text="Test" />
                 </TabItem.Content>
-                
+
             </TabItem>
 
             <TabItem>
